--- a/css/main.less
+++ b/css/main.less
@@ -1,4 +1,3 @@
-//variables
 @headline-font: 'BebasNeue Light', 'Franklin Gothic Medium', 'Franklin Gothic', 'ITC Franklin Gothic', Arial, sans-serif;
 @numeric-font: 'BebasNeue Bold', 'Franklin Gothic Medium', 'Franklin Gothic', 'ITC Franklin Gothic', Arial, sans-serif;
 @copy-font: 'Courier Prime', 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
@@ -7,7 +6,6 @@
 @light-blue: #39d8ff;
 @morse-code-color: #dc3e38;
 
-//fonts
 @font-face {
   font-family: 'BebasNeue Bold';
   src: url('../fonts/BebasNeue_Bold.otf')  format('opentype'),    
@@ -21,11 +19,16 @@
   src: url('../fonts/Courier_Prime.ttf')  format('truetype'),    
 }
 
-//globals
+html {
+  font-size: 16px;
+}
 body {
   background-color: @background-color;
   overflow-x: hidden;
   width:100%;
+}
+blockquote {
+  margin:0;
 }
 canvas {
     position: relative;
@@ -33,8 +36,12 @@ canvas {
 }
 cite {
   font-style: normal;
+  .smallcaps {
+    clear: left;
+    display: inline-block;
+  }
 }
-h1, h2, .h2, h3, .h3, h4, h5, h6 {
+h1, h2, .h2, h3 {
   margin-top: 0;
   font-family: @headline-font;
   font-weight: normal;
@@ -42,60 +49,49 @@ h1, h2, .h2, h3, .h3, h4, h5, h6 {
   color: #ffffff;
 }
 h1 {
-  font-size:7.8vw;
+  font-size:8vw;
   letter-spacing: .6vw;
   margin-bottom: 3rem;
 }
 h2, .h2 {
-  font-size:1rem;
+  font-size: 1.15rem;
   letter-spacing: .34vw;
   line-height: 1.35rem;
   margin-bottom: 1.5rem;
 }
-h3, .h3 {
-  font-size: 1rem;
+h3  {
+  font-size: 1.2rem;
   letter-spacing: .34vw;
   line-height: .3rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
+}
+p {
+  margin-bottom: .8rem;
 }
 p, cite {
-  line-height: 23px;
+  line-height: 29px;
   font-family: @copy-font;
-  font-size: .9rem;
+  font-size: 1.1rem;
   opacity: 0.9;
   color: #ffffff;
 }
-blockquote {
-  margin:0;
-}
 .smallcaps {
-  line-height: 18px;
+  line-height: 23px;
   letter-spacing: 2px;
-  font-size: .6rem;
-}
-cite.smallcaps {
-  clear:left;
-  display: inline-block;
+  font-size: .8rem;
 }
 ul {
   list-style: none;
   padding: 0;
   width:100%;
 }
-
-//navbar
 .navbar {
-  height:53px;
+  height:65px;
   width:100%;
   white-space: nowrap;
   display: table;
   * {
     color: rgba(255, 255, 255, 0.6);
-  }
-  h2, span  {
-    display:table-cell;
-    vertical-align: middle;
-    text-align: left;
   }
   #binoculars {
     position:relative;
@@ -104,11 +100,20 @@ ul {
   }
   #chevron {
     position: absolute;
-    left:105px;
-    top:21px;
+    left:120px;
+    top:28px;
+  }
+  h2, span  {
+    display:table-cell;
+    vertical-align: middle;
+    text-align: left;
   }
   h2:first-of-type {
     padding-left: 1.7rem;
+  }
+  #logo {
+  width: 73px;
+  border-right: solid 1px rgba(255, 255, 255, 0.3);
   }
   span:last-of-type {
     position:relative;
@@ -117,65 +122,46 @@ ul {
     padding-left: 10px;
   }
 }
-#logo {
-  width: 73px;
-  border-right: solid 1px rgba(255, 255, 255, 0.3);
-}
-
-
 #header-wrap {
   width:100%;
-  margin-bottom: -4rem;
-}
-#map {
-  display:block;
-  width:100%;
-}
-.page-header {
-  position: relative;
-  left:17vw;
-  bottom: 15.5vw;
-  height:17.4vw;
-  width:51.5vw;
-  background-color: @morse-code-color;
-  * {margin-left: 3.5vw}
-  img {
-    margin-top:2.5vw;
-    margin-left:4vw;
+  margin-bottom: -5rem;
+  #map {
+    width:100%;
+  }
+  .page-header {
+    position: relative;
+    left:17vw;
+    bottom: 15.5vw;
+    min-height:17.4vw;
+    width:51.5vw;
+    background-color: @morse-code-color;
+    * {
+      margin-left: 3.5vw
+      }
+    img {
+      margin-top:2.5vw;
+      margin-left:4vw;
+      }
+  }
+  .page-title {
+    margin-left: 3.2vw;
+    margin-bottom: .8vw;
   }
 }
-.page-title {
-  margin-left: 3.2vw;
-  margin-bottom: .8vw;
-}
-
-
-/*
- * Main column and sidebar layout
- */
-.sidebar ol ol {
-  margin-left: 16px;
-}
-
 main {
   display: block;
   margin-left: 21vw;
   width: 60vw;
 }
-
-
-/*
- * sections
- */
-
 section {
   clear: both;
-  margin-bottom: 19rem;
- // overflow: hidden;
+  margin-bottom: 26rem;
 }
+
 section#current-staff::after,
 section#updates::after,
 #updates .floated-pair::after,
+section#mission-statement::after,
 section#financials-report::after,
 section#team::after,
 section#team ul::after {
@@ -192,44 +178,58 @@ section#financials-report {
 section#team {
   margin-bottom: 3rem;
 }
-h1#staff {
-  margin-bottom: -1rem;
-}
-#updates h1 {
-  margin-bottom: 2rem;
-}
 section#board-of-directors,
 section#interns,
 section#associate-board,
-section#design-cohort-members {
+section#design-cohort-members,
+section#funders,
+section#individuals,
+section#foundations,
+section#organizations {
   margin-bottom: 3.5rem;
 }
 section#volunteers2 {
   margin-bottom: 10rem;
 }
+section#government {
+  margin-bottom: 10.2rem;
+}
+#current-staff img,
+#team img {
+  height:170px;
+  width:170px;
+}
 #current-staff ul li, #team li {
   float: left;
   margin-right: 15px;
-  height:240px;
-  width: 135px;
+  height:260px;
+  width: 170px;
   .smallcaps {
     margin-top: -10px;
   }
 }
 #current-staff li, #team li {
-  margin-top: 3rem;
+  margin-top: 6rem;
 }
+
 .section-title {
   max-width:28rem;
 }
 #team h2.section-title {
   margin-bottom: 0;
 }
-#letter .section-title, #at-a-glance .section-title {
+#letter .section-title,
+#at-a-glance .section-title {
   color: @light-blue;
 }
 #letter h1 {
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
+}
+h1#staff {
+  margin-bottom: -2rem;
+}
+#updates h1 {
+  margin-bottom: 3rem;
 }
 #financials-report .section-title{
   margin-bottom: 2rem;
@@ -241,10 +241,12 @@ section#volunteers2 {
   width: 43.5vw;
 }
 div.floated-pair {
-  clear:both;
-  margin:-.7rem 0;
-  width:69vw;
-  * {vertical-align: top}
+  clear: both;
+  margin: -.7rem 0;
+  width: 69vw;
+  * {
+    vertical-align: top
+  }
   img {
     position: relative;
     background-color: @dark-grey;
@@ -280,10 +282,16 @@ div#yerika {
   background-color: @dark-grey;
   display: inline-block;
   float:right;
-  height:20vw;
-  width:33.6vw;
+  min-height:19vw;
+  width:32vw;
   margin: 1.5rem 1.5rem 0 0;
-
+  padding: .5rem 0 0 .75rem;
+  blockquote {
+    max-width: 21.5rem;
+  }
+  .h2 {
+    line-height: 1.6rem;
+  }
 }
 #updates .floated-pair {
   margin-bottom: 14vw;
@@ -306,36 +314,48 @@ div#yerika {
 }
 #mission-statement {
   height: 784px;
-  margin-top: -6rem;
-  margin-bottom: 7rem;
+  margin-top: -10rem;
+  margin-bottom: 20rem;
   position: relative;
   >* {position: absolute;}
   img:nth-child(1) {
-    left:-134px;
-    top:95px;
+    height: 21.5vw;
+    width: 23.4vw;
+    left:-160px;
+    top:115px;
   }
   img:nth-child(2) {
-    left:139px;
+    height: 25.77vw;
+    width: 15.26vw;
+    left:180px;
     top:0;
   }
   img:nth-child(3) {
-    left:325px;
-    top:30px;
+    height: 40.1vw;
+    width: 37.92vw;
+    left:410px;
+    top:40px;
   }
   img:nth-child(4) {
+    height: 26.71vw;
+    width: 29.28vw;
     left:-16px;
-    top:450px;
+    top:565px;
   }
   img:nth-child(5) {
-    left:415px;
-    top:450px;
+    height: 32.48vw;
+    width: 37.93vw;
+    left:520px;
+    top:565px;
   }
   div{
     background-color: @dark-grey;
+    border: 2px solid @background-color;
     left:-55px;
-    top:251px;
-    height: 379px;
-    width:620px;
+    top:320px;
+    min-height: 32vw;
+    padding: .5rem .75rem 3rem 1rem;
+    width:58vw;
     * {
       padding: 0 55px 0 55px;
     }
@@ -347,7 +367,6 @@ div#yerika {
 section#at-a-glance {
   margin-bottom: 11rem;
   p[class^=row] {
-    font-size: .88rem;
     width: 10em;
   }
   .row {
@@ -509,24 +528,31 @@ section#at-a-glance {
 
 #updates .floated-pair img {
   position: absolute;
+  height: 35vw;
+  width: 35vw;
 }
 img.strategic-planning {
-  margin: -4rem 0 0 -4rem;
+  margin: -4.5rem 0 0 -5rem;
 }
 img.the-code {
-  margin: -1rem 0 0 -7rem;
+  margin: .5rem 0 0 -8.5rem;
 }
 img.diversity {
-  margin:-4rem 0 0 -4rem;
+  margin:-1rem 0 0 -5rem;
 }
 img.design-cohort {
-  margin:-4rem 0 0 -7rem;
+  margin: 1rem 0 0 -8.5rem;
+}
+.pair-left.text-column {
+  margin-top: 1rem;
 }
 .pair-right.text-column {
-  margin-right: -2rem;
+  margin-right: -3.5rem;
+  margin-top: 2rem;
 }
 div.design-cohort {
   margin-top:-2rem;
+  padding-top: 2.5rem;
 }
 
 .box {
@@ -535,9 +561,12 @@ div.design-cohort {
   padding:2vw 0 0 2vw;
   right: 16vw;
   * {color: @dark-grey}
+  blockquote {
+    line-height: 1.7rem;
+  }
 }
 #core-programs .box {
-  margin-top: -3vw;
+  margin-top: 0vw;
   height: 16vw;
   width: 21vw;
   p {
@@ -545,23 +574,27 @@ div.design-cohort {
   }
 }
 #core-programs img {
-  margin-top: 1rem;
+  margin-top: 3.7rem;
+  height: 34.7vw;
+  width: 57.7vw;
 }
 #volunteers {
   margin-bottom: 12rem;
 }
 #volunteers img {
   margin-top: 1rem;
-  margin-bottom: 4rem;
+  margin-bottom: 5rem;
+  height: 40.5vw;
+  width: 57.5vw;
 }
 #volunteers .box{
-  margin-top:-22vw;
-  padding-left: 1vw;
-  height:16vw;
-  width:44vw;
+  margin-top:-20vw;
+  padding-left: 1.5vw;
+  min-height:17vw;
+  width:43.5vw;
   blockquote, cite {font-weight: bold;}
   blockquote {
-    padding:0;
+    padding:0 2rem 1rem 0;
     margin-left: .6rem;
   }
   cite {
@@ -587,7 +620,7 @@ div.design-cohort {
   cite {
     padding-left: .7rem;
     span {
-      padding-left:1rem;
+      padding-left:2rem;
     }
   }
   p.h2 {
@@ -624,54 +657,59 @@ div.design-cohort {
   margin-right: 2rem;
   margin-top: 1rem;
 }
+.pie-chart {
+  margin-top: 2rem;
+}
 .no  {
-  font-size: 1.4rem;
+  font-size: 1.9rem;
   margin-top: .2rem;
 }
 .pie-data {
   position: absolute;
 }
 .pie-data#direct-giving {
-  top: 10.2rem;
-  left: 3rem;
+  top: 13rem;
+  left: 3.7rem;
 }
 .pie-data#special-events {
-  top:9rem;
-  left:13.5rem;
+  top:11.1rem;
+  left:16.5rem;
 }
 .pie-data#in-kind {
-  top:18.2rem;
-  left:9.8rem;
+  top:22.8rem;
+  left:12.2rem;
 }
 #income-wrap .pie-data.total {
-  top:24rem;
+  top:30.2rem;
   * {
     color: @light-blue;
   }
 }
 #expenses-wrap .pie-data.total {
-  top:25rem;
+  top:31.4rem;
+  left: .6rem;
   * {
     color: @light-blue;
   }
 }
 .pie-data#programming {
-  top:12.2rem;
-  left: 3rem;
+  top:15.4rem;
+  left: 4.4rem;
 }
 .pie-data#fundraising {
-  top: 10rem;
-  left: 13.5rem;
+  top: 12.85rem;
+  left: 17.75rem;
 }
 .pie-data#administrative {
-  top: 19.5rem;
-  left: 12rem;
+  top: 24.4rem;
+  left: 16rem;
 }
 #team .section-title {
-  max-width: 31rem;
+  max-width: 38rem;
 }
 #team ul {
-  margin-top: 0;
+  margin-bottom: 5rem;
+  margin-top: -3rem;
 }
 #team .smallcaps {
   opacity: .6;
@@ -680,7 +718,10 @@ div.design-cohort {
 #interns ul,
 #associate-board ul,
 #design-cohort-members ul,
-#volunteers2 ul {
+#volunteers2 ul,
+#individuals ul,
+#foundations ul,
+#organizations ul {
     -moz-column-count: 3;
     -moz-column-gap: 3rem;
     -webkit-column-count: 3;
@@ -696,17 +737,67 @@ div.design-cohort {
       opacity: .6;
     }
 }
+#funders {
+  img {
+  margin-top: -1rem;
+  margin-bottom: 5rem;
+  height: 41vw;
+  width: 57.5vw;
+  }
+  .box {
+    height: 24vw;
+    width: 43vw;
+    margin: -23rem 0 0 0;
+    padding:1.9vw .5vw 1.2vw 1.2vw;
+  }
+  blockquote, cite {font-weight: bold;}
+  blockquote {
+  padding:0;
+  margin-left: .6rem;
+  max-width: 31rem;
+  }
+  cite {
+    padding-left: .8rem;
+  }
+  p {
+    padding:0;
+  }
+  .text-column {
+    max-width: 28rem;
+  }
+}
+#government p {
+  line-height: 9px;
+}
 /*
  * Footer
  */
 
 footer {
-  padding: 40px 0;
-  color: #999;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: 1px solid #e5e5e5;
-}
-footer p:last-child {
-  margin-bottom: 0;
+  background-color: @dark-grey;
+  margin-bottom: 33.2rem;
+  padding: 0 0 0 18.5vw;
+  height:15.7rem;
+  width: 100%;
+  * {
+    color: rgba(255, 255, 255, 0.6);
+  }
+  #contact {
+    padding-top: 4rem;
+  }
+  #contact * {
+    display: inline-block;
+  }
+  h2 {
+    margin-bottom: 0;
+  }
+  img {
+    margin: 0 4px -1px -4px;
+  }
+  p {
+    margin-left: 26px;
+  }
+  .smallcaps {
+    margin-top: 0;
+  }
 }
